reimplement the pipe modal

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -68,6 +68,8 @@
         "iterator": "cpp",
         "version": "cpp",
         "complex": "cpp",
-        "memory_resource": "cpp"
+        "memory_resource": "cpp",
+        "deque": "cpp",
+        "span": "cpp"
     }
 }
