parse succeed for simple number

--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -1,1 +1,2 @@
-add_executable(string_parse string_parse.cc)
+# add_executable(string_parse string_parse.cc)
+add_executable(parse_number parse_number.cc)
