--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,10 +6,16 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 set(CMAKE_CXX_FLAGS "${CMKAE_CXX_FLAGS} -g -Wall")
 
+option(ENABLE_ASSERTIONS "Enable/disable assertions" OFF)
+
+if(NOT ENABLE_ASSERTIONS)
+    add_compile_definitions(NDEBUG)
+endif()
+
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
 include(FindGTest)
 include_directories(${GTEST_INCLUDE_DIR})
 include_directories(${CMAKE_SOURCE_DIR}/src/include)
 
 add_subdirectory(test)
-# add_subdirectory(example)
+add_subdirectory(example)
