--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,23 +1,28 @@
 {
+    "editor.formatOnSave": true,
+    "clang-format.executable": "/usr/local/opt/llvm/bin/clang-format",
+    "[cpp]": {
+        "editor.defaultFormatter": "xaver.clang-format"
+    },
     "files.associations": {
-        "*.h": "cpp",
+        "*.h": "c",
         "*.lock": "toml",
         "*.hdl": "verilog",
         "*.tst": "verilog",
         "*.cmp": "verilog",
         ".clang-format": "yaml",
+        ".clang-tidy": "yaml",
         "*.in": "cmake",
-        "__bit_reference": "cpp",
+        "*.cpp2": "css",
+        "variant": "cpp",
+        "__bits": "cpp",
         "__config": "cpp",
         "__debug": "cpp",
-        "__hash_table": "cpp",
-        "__node_handle": "cpp",
-        "__split_buffer": "cpp",
+        "__locale": "cpp",
         "__tuple": "cpp",
         "__verbose_abort": "cpp",
-        "array": "cpp",
         "atomic": "cpp",
-        "bit": "cpp",
+        "bitset": "cpp",
         "cstddef": "cpp",
         "cstdint": "cpp",
         "cstdio": "cpp",
@@ -26,50 +31,46 @@
         "cwchar": "cpp",
         "cwctype": "cpp",
         "exception": "cpp",
+        "format": "cpp",
         "initializer_list": "cpp",
+        "ios": "cpp",
         "iosfwd": "cpp",
+        "iostream": "cpp",
+        "istream": "cpp",
         "limits": "cpp",
+        "locale": "cpp",
         "memory": "cpp",
+        "mutex": "cpp",
         "new": "cpp",
+        "ostream": "cpp",
         "stdexcept": "cpp",
+        "streambuf": "cpp",
         "string": "cpp",
         "string_view": "cpp",
+        "system_error": "cpp",
         "tuple": "cpp",
         "type_traits": "cpp",
         "typeinfo": "cpp",
-        "unordered_map": "cpp",
-        "variant": "cpp",
         "vector": "cpp",
-        "__errc": "cpp",
-        "__locale": "cpp",
-        "__mutex_base": "cpp",
         "__threading_support": "cpp",
-        "bitset": "cpp",
         "cctype": "cpp",
-        "charconv": "cpp",
-        "clocale": "cpp",
         "cmath": "cpp",
-        "cstdarg": "cpp",
         "ctime": "cpp",
-        "ios": "cpp",
-        "istream": "cpp",
-        "locale": "cpp",
-        "mutex": "cpp",
+        "execution": "cpp",
         "optional": "cpp",
-        "ostream": "cpp",
+        "print": "cpp",
         "ratio": "cpp",
-        "sstream": "cpp",
-        "streambuf": "cpp",
-        "system_error": "cpp",
         "algorithm": "cpp",
-        "__bits": "cpp",
-        "iostream": "cpp",
-        "functional": "cpp",
-        "iterator": "cpp",
-        "version": "cpp",
-        "complex": "cpp",
-        "memory_resource": "cpp",
+        "__bit_reference": "cpp",
+        "__split_buffer": "cpp",
+        "__hash_table": "cpp",
+        "__tree": "cpp",
+        "array": "cpp",
         "deque": "cpp",
-        "span": "cpp"
-    }
+        "map": "cpp",
+        "queue": "cpp",
+        "span": "cpp",
+        "stack": "cpp",
+        "unordered_map": "cpp"
+    },
 }
