--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -77,7 +77,24 @@
         "__node_handle": "cpp",
         "clocale": "cpp",
         "cstdarg": "cpp",
-        "complex": "cpp"
+        "complex": "cpp",
+        "compare": "cpp",
+        "__errc": "cpp",
+        "__mutex_base": "cpp",
+        "__nullptr": "cpp",
+        "__string": "cpp",
+        "any": "cpp",
+        "charconv": "cpp",
+        "chrono": "cpp",
+        "concepts": "cpp",
+        "forward_list": "cpp",
+        "fstream": "cpp",
+        "list": "cpp",
+        "numeric": "cpp",
+        "random": "cpp",
+        "set": "cpp",
+        "unordered_set": "cpp",
+        "filesystem": "cpp"
     },
     "C_Cpp.default.cppStandard": "c++20",
     "clang-format.language.cpp.fallbackStyle": "",
